[package]
name = "fast-protocol"
version = "0.1.0"
edition = "2021"
authors = ["Protocol Team"]
license = "MIT"
description = "High-speed, cross-platform custom network protocol"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
async-trait = "0.1"

# Encryption
aes-gcm = "0.10"
chacha20poly1305 = "0.10"

# Compression
zstd = "0.13"
lz4 = "1.24"

# For Node.js bindings
neon = { version = "1.0", optional = true, default-features = false, features = ["napi-6"] }

# For WASM
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
] }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[features]
default = ["encryption", "compression"]
encryption = []
compression = []
nodejs = ["neon"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys", "web-sys"]

[[bench]]
name = "protocol_bench"
harness = false

