[package]
name = "fast-protocol-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "server.rs"

[[bin]]
name = "client"
path = "client.rs"

[dependencies]
fast-protocol = { path = "../../rust-core" }
tokio = { version = "1.35", features = ["full"] }
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

